--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,13 @@
 {
   "presets": [
     ["@babel/preset-env", { "modules": false }]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime", {
+        "helpers": false,
+        "regenerator": true
+      }
+    ]
   ]
 }
