--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/mfuu/performance#readme",
   "devDependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.8.7",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^25.5.1",
