--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "performance",
   "version": "0.0.1",
   "description": "web performance test with `window.performance` API",
-  "main": "index.js",
+  "main": "dist/draggable.js",
   "files": [
     "src",
     "dist"
@@ -37,6 +37,7 @@
     "rollup": "^2.61.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0"
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
